fix issues with assessments
